logout-greeter: continue if ksmserver errors

In DBus a reply is a union of the response or the error reply. If we
don't check the type the value could be the error.

BUG: 449948